--- a/maintenance/css/styles.css
+++ b/maintenance/css/styles.css
@@ -3,4 +3,17 @@ body {
  font-family: Arial;
  font-size: 14px;
  color: #1f1f1f;
+ margin-top: 60px;
+ background: #fff;
 }
+img {
+ width: 200px;
+ max-height: 100%;
+}
+a {
+ color: #61226B;
+ font-weight: bold;
+}
+
+
+
